// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeadlessRenderer > combined overlays > snapshot - position + highlights + path 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
<polyline points="0,-4 0,-3.7 0,-2.3 0,-2 0,-1.7 0,-0.3 0,0 0.3,0 1.7,0 2,0" stroke="black" stroke-width="0.2" stroke-linecap="round" stroke-linejoin="round" opacity="0.8" fill="none"/>
<polyline points="0,-4 0,-3.7 0,-2.3 0,-2 0,-1.7 0,-0.3 0,0 0.3,0 1.7,0 2,0" stroke="#66E64D" stroke-width="0.1" stroke-linecap="round" stroke-linejoin="round" opacity="0.8" fill="none"/>
<rect x="1.55" y="-0.44999999999999996" width="0.8999999999999999" height="0.8999999999999999" fill="none" stroke="#ff0000" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
<rect x="-0.44999999999999996" y="-4.45" width="0.8999999999999999" height="0.8999999999999999" fill="none" stroke="#0000ff" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
<circle cx="0" cy="0" r="0.51" fill="none" stroke="rgba(0, 229, 178, 1)" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
</svg>"
`;

exports[`HeadlessRenderer > drawArea + exportSvg > snapshot - basic area export 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
</svg>"
`;

exports[`HeadlessRenderer > highlights > snapshot - multiple highlights 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
<rect x="-0.44999999999999996" y="-0.44999999999999996" width="0.8999999999999999" height="0.8999999999999999" fill="none" stroke="#ff0000" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
<rect x="1.55" y="-0.44999999999999996" width="0.8999999999999999" height="0.8999999999999999" fill="none" stroke="#00ff00" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
</svg>"
`;

exports[`HeadlessRenderer > highlights > snapshot - single highlight 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
<rect x="-0.44999999999999996" y="-0.44999999999999996" width="0.8999999999999999" height="0.8999999999999999" fill="none" stroke="#ff0000" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
</svg>"
`;

exports[`HeadlessRenderer > paths > snapshot - path overlay 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
<polyline points="0,-4 0,-3.7 0,-2.3 0,-2 0,-1.7 0,-0.3 0,0 0.3,0 1.7,0 2,0" stroke="black" stroke-width="0.2" stroke-linecap="round" stroke-linejoin="round" opacity="0.8" fill="none"/>
<polyline points="0,-4 0,-3.7 0,-2.3 0,-2 0,-1.7 0,-0.3 0,0 0.3,0 1.7,0 2,0" stroke="#66E64D" stroke-width="0.1" stroke-linecap="round" stroke-linejoin="round" opacity="0.8" fill="none"/>
</svg>"
`;

exports[`HeadlessRenderer > paths > snapshot - path with custom color 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
<polyline points="0,0 0,-0.3 0,-1.7 0,-2 0,-2.3 0,-3.7 0,-4" stroke="black" stroke-width="0.2" stroke-linecap="round" stroke-linejoin="round" opacity="0.8" fill="none"/>
<polyline points="0,0 0,-0.3 0,-1.7 0,-2 0,-2.3 0,-3.7 0,-4" stroke="#ff0000" stroke-width="0.1" stroke-linecap="round" stroke-linejoin="round" opacity="0.8" fill="none"/>
</svg>"
`;

exports[`HeadlessRenderer > position > snapshot - with position marker 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10.5 -14 24 19.5">
<rect x="-10.5" y="-14" width="24" height="19.5" fill="#000000"/>
<rect x="-2" y="2" width="5" height="0.5" fill="rgba(0, 0, 0, 0.39215686274509803)"/>
<text x="0.5" y="2.25" font-size="0.45" fill="rgba(255, 255, 255, 1)" text-anchor="middle" dominant-baseline="central">Welcome to the Village</text>
<polyline points="6,0 7,-0.5 7.5,1" stroke="rgb(200, 50, 50)" stroke-width="0.025" stroke-dasharray="0.4 0.2" fill="none"/>
<polygon points="7.5,1 7.32,0.76 7.5,0.7" fill="rgb(200, 50, 50)" stroke="rgb(200, 50, 50)" stroke-width="0.025"/>
<polyline points="8,2 7,1.5 6.5,0.5" stroke="rgb(150, 150, 255)" stroke-width="0.025" stroke-dasharray="0.05 0.05" fill="none"/>
<polyline points="0 -0.3 0 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-1.15" width="0.3" height="0.3" stroke="rgb(10, 155, 10)" stroke-width="0.025" fill="none"/>
<polyline points="0.3 0 1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="0.85" y="-0.15" width="0.3" height="0.3" stroke="rgb(226, 205, 59)" stroke-width="0.025" fill="none"/>
<polyline points="0 0.3 0 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-0.3 0 -1.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 -2.3 0 -3.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<rect x="-0.15" y="-3.15" width="0.3" height="0.3" stroke="rgb(155, 10, 10)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 -0.3 3.7 -1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="2.3 0 3.7 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="-2.3 0.3 -3.7 1.7" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0 2.3 0 2.9" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996" fill="none"/>
<polygon points="0,2.9 -0.13416407864998742,2.631671842700025 0.13416407864998736,2.631671842700025" fill="rgb(30,120,30)" stroke="rgb(30,120,30)" stroke-width="0.034999999999999996"/>
<polyline points="7.7 2 6 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="7.7 2 6.85 1" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="6.85,1 7.281497675266652,1.2526059307290194 7.029790698027772,1.4665568613820683" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<polyline points="-2 -1.7 -2 0" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none" stroke-dasharray="0.1 0.05"/>
<polyline points="-2 -1.7 -2 -0.85" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996" fill="none" stroke-dasharray="0.1 0.05"/>
<polygon points="-2,-0.85 -2.165175212364053,-1.3219291781830087 -1.834824787635947,-1.3219291781830087" fill="rgb(155, 10, 10)" stroke="rgb(225, 255, 225)" stroke-width="0.034999999999999996"/>
<g transform="translate(-0.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.3,0.354 0.44549226783578566,0.498 0.15450773216421435,0.498" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.6,0 1.1,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(1.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(25,25,25)" text-anchor="middle" dominant-baseline="auto">S</text>
</g>
<g transform="translate(-2.3,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-0.3,-4.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(3.7,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.2999999999999998,0.246 0.15450773216421432,0.10199999999999987 0.4454922678357853,0.10199999999999987" fill="rgba(25,25,25, 0.6)" stroke="rgba(25,25,25)" stroke-width="0.025"/>
</g>
<g transform="translate(-4.3,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(30,120,30)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(1.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(200,160,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polyline points="0.30000000000000004,0 0.30000000000000004,-0.5" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
<polyline points="0.5999999999999999,0.30000000000000004 1.0999999999999999,0.30000000000000004" stroke="rgb(225, 255, 225)" stroke-width="0.025" fill="none"/>
</g>
<g transform="translate(3.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<polygon points="0.246,0.3 0.10199999999999987,0.44549226783578566 0.10199999999999987,0.15450773216421435" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
<polygon points="0.3540000000000001,0.3 0.4980000000000002,0.15450773216421432 0.4980000000000002,0.44549226783578566" fill="rgba(25,25,25, 0.6)" stroke="rgb(226, 205, 59)" stroke-width="0.025"/>
</g>
<g transform="translate(5.7,-0.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
<text x="0.3" y="0.45749999999999996" font-size="0.44999999999999996" font-family="sans-serif" font-weight="bold" fill="rgba(225,255,255)" text-anchor="middle" dominant-baseline="auto">X</text>
<polygon points="0.05399999999999938,0.3 0.1979999999999995,0.15450773216421432 0.1979999999999995,0.44549226783578566" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
<polygon points="0.5460000000000003,0.3 0.40200000000000014,0.44549226783578566 0.40200000000000014,0.15450773216421435" fill="rgba(225,255,255, 0.6)" stroke="rgb(10, 155, 10)" stroke-width="0.025"/>
</g>
<g transform="translate(7.7,1.7)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(80,60,40)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<g transform="translate(-2.3,-2.3)">
<rect x="0" y="0" width="0.6" height="0.6" fill="rgb(128,128,128)" stroke="rgb(225, 255, 225)" stroke-width="0.025"/>
</g>
<text x="-7.5" y="-8.5" font-size="2.5" font-family="sans-serif" fill="white" text-anchor="start" dominant-baseline="auto">Test Village</text>
<circle cx="0" cy="0" r="0.51" fill="none" stroke="rgba(0, 229, 178, 1)" stroke-width="0.1" stroke-dasharray="0.05 0.05"/>
</svg>"
`;
